<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="us.forgeinnovations.deltaman.ui.ShoppingActivity">
    <item
        android:id="@+id/action_cancel"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="100"
        android:title="@android:string/cancel"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_next"
        android:icon="@android:drawable/ic_media_next"
        android:orderInCategory="101"
        android:title="Next"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_send_mail"
        android:icon="@android:drawable/sym_action_email"
        android:orderInCategory="102"
        android:title="@string/action_send_email"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_set_reminder"
        android:icon="@android:drawable/ic_popup_reminder"
        android:orderInCategory="103"
        android:title="@string/action_set_reminder"
        app:showAsAction="ifRoom|withText" />
</menu>
